--- a/src/ejs/common/_p-drawer.ejs
+++ b/src/ejs/common/_p-drawer.ejs
@@ -1,7 +1,7 @@
 <div class="p-drawer js-drawer">
     <div class="p-drawer__logo">
-        <a href="#">
-            <img src="./images/common/logo_white.png" alt="">
+        <a href="./">
+            <img src="./images/common/logo_white.png" alt="ロゴ">
         </a>
     </div>
     <ul class="p-drawer__links">
