--- a/src/ejs/common/_p-footer2.ejs
+++ b/src/ejs/common/_p-footer2.ejs
@@ -21,7 +21,7 @@
                     </a>
                 </div>
             </div>
-            <ul class="p-footer__sns">
+            <!-- <ul class="p-footer__sns">
                 <li class="p-footer__sns-link">
                     <a href="#" target="_blank" rel="noopener rerferrer">
                         <img src="../images/common/twitter.png" alt="twitter">
@@ -32,14 +32,14 @@
                         <img src="../images/common/facebook.png" alt="twitter">
                     </a>
                 </li>
-            </ul>
+            </ul> -->
         </div>
         <ul class="p-footer__links">
             <li class="p-footer__link">
-                <a href="#">会社情報</a>
+                <a href="../message/#company">会社情報</a>
             </li>
             <li class="p-footer__link">
-                <a href="#">プライバシーポリシー</a>
+                <a href="../privacy/">プライバシーポリシー</a>
             </li>
         </ul>
         <div class="p-footer__bottom">
