--- a/src/ejs/component/_p-list.ejs
+++ b/src/ejs/component/_p-list.ejs
@@ -1,6 +1,6 @@
 <div class="p-list">
     <time class="p-list__time" datetime=”2020-06-15”>2020-06-15</time>
     <h3 class="p-list__title">
-        ニュースタイトルが入ります。ニュースタイトルが入ります。
+        <p>ニュースタイトルが入ります。ニュースタイトルが入ります。</p>
     </h3>
 </div>
