--- a/src/ejs/project/_p-about.ejs
+++ b/src/ejs/project/_p-about.ejs
@@ -17,7 +17,7 @@
             </p>
             <div class="p-about__btn">
                 <%- include('../component/_c-btn',{
-                    link:'#',
+                    link:'./cambus/',
                     text:'CAM-BUSについて',
                     type:'yellow'
                 }) %> 
