--- a/src/ejs/project/_p-banners.ejs
+++ b/src/ejs/project/_p-banners.ejs
@@ -16,7 +16,7 @@
                 <button class="p-banners__btn">
                     <%- include('../component/_c-btn',{
                         type:'',
-                        link:'#',
+                        link:'./message/',
                         text:'代表挨拶へ'
                     }) %> 
                 </button>
@@ -45,7 +45,7 @@
                 <button class="p-banners__btn">
                     <%- include('../component/_c-btn',{
                         type:'',
-                        link:'#',
+                        link:'./news/',
                         text:'ニュース一覧へ'
                     }) %> 
                 </button>
@@ -67,7 +67,7 @@
                 <button class="p-banners__btn">
                     <%- include('../component/_c-btn',{
                         type:'',
-                        link:'#',
+                        link:'./recruit/',
                         text:'採用情報へ'
                     }) %> 
                 </button>
