--- a/src/ejs/project/_p-concept.ejs
+++ b/src/ejs/project/_p-concept.ejs
@@ -20,7 +20,7 @@
             <button class="p-concept__btn">
                 <%- include('../component/_c-btn',{
                     type:'yellowshadow',
-                    link:'#',
+                    link:'./concept/',
                     text:'詳しく見る'
                 }) %> 
             </button>
