--- a/src/ejs/project/_p-drivers.ejs
+++ b/src/ejs/project/_p-drivers.ejs
@@ -58,7 +58,7 @@
         <button class="p-drivers__btn">
             <%- include('../component/_c-btn',{
                 type:'shadow',
-                link:'#',
+                link:'./drivers/',
                 text:'詳しく見る'
             }) %> 
         </div>
