--- a/src/ejs/project/_p-entry.ejs
+++ b/src/ejs/project/_p-entry.ejs
@@ -2,7 +2,7 @@
   <div class="p-entry__inner">
     <div class="p-entry__btn">
       <%- include('../component/_c-entryBtn2',{
-      link:'#'
+      link:'../entry/'
   }) %>
     </div>
   </div>
