--- a/src/ejs/project/_p-training.ejs
+++ b/src/ejs/project/_p-training.ejs
@@ -32,7 +32,7 @@
             <button class="p-training__btn">
                 <%- include('../component/_c-btn',{
                     type:'shadow',
-                    link:'#',
+                    link:'./training/',
                     text:'詳しく見る'
                 }) %> 
             </button>
