--- a/src/ejs/project/_p-company.ejs
+++ b/src/ejs/project/_p-company.ejs
@@ -1,4 +1,4 @@
-<div class="p-comapny">
+<div class="p-comapny" id="company">
     <div class="p-company__inner l-inner">
         <div class="p-comapny__title">
             <%- include('../component/_c-title',{
