--- a/src/ejs/project/_p-environment.ejs
+++ b/src/ejs/project/_p-environment.ejs
@@ -21,7 +21,7 @@
         <div class="p-environment__btn">
             <%- include('../component/_c-btn',{
                 type:'shadow',
-                link:'environment.html',
+                link:'./environment/',
                 text:'詳しく見る'
             }) %> 
         </div>
