--- a/src/ejs/project/_p-mv.ejs
+++ b/src/ejs/project/_p-mv.ejs
@@ -17,7 +17,7 @@
                 <img src="./images/top/mv_01.png" alt="きっと見つかる君にピッタリの働き方">
             </picture>
             <div class="p-mv__entryBtn">
-                <a href="#">
+                <a href="./entry/">
                     <img src="./images/common/entry_btn.png" alt="応募する">
                 </a>
             </div>
@@ -35,7 +35,7 @@
             <span>SCROLL DOWN</span>
         </button>
         <button class="p-mv__entry c-entryBtn js-entry">
-            <a href="#">
+            <a href="./entry">
                 <img src="./images/common/entry_icon.png" alt="応募する">
                 <p>ENTRY | 応募する</p>
             </a>
