--- a/src/sass/object/project/_p-footer.scss
+++ b/src/sass/object/project/_p-footer.scss
@@ -72,6 +72,8 @@
         width: 76.315%;
         grid-template-columns: repeat(2,1fr);
         gap: rem(20);
+
+        width: 100%;
     }
 }
 
@@ -81,6 +83,8 @@
     @include mq(md) {
         max-width: rem(280);
         width: 100%;
+
+        margin: 0 auto;
     }
 }
 
@@ -125,6 +129,8 @@
     text-align: center;
     color: $white;
     line-height: rem(25);
+    white-space: nowrap;
+    margin-top: rem(5);
 
     @include mq(md) {
         font-size: rem(16);
