--- a/src/sass/object/project/_p-mv.scss
+++ b/src/sass/object/project/_p-mv.scss
@@ -33,11 +33,13 @@
 }
 
 .p-mv__subtitle {
+    position: relative;
     font-size: 7.46vw;
     font-weight: bold;
     font-family: $sub-font;
     line-height: calc(70/50);
     margin-top: rem(25);
+    z-index: 5;
 
     @include mq(md) {
         font-size: rem(70);
@@ -74,11 +76,12 @@
 .p-mv__img {
     max-width: 53vw;
     margin-left: rem(25);
-    animation: bu-bu- 3s infinite linear .8s;
+    animation: bu-bu- 5s infinite linear .8s;
     
     @include mq(md) {
         width: rem(500);
         max-width: rem(500);
+        animation-duration: 7s;
     }
 }
 
@@ -116,7 +119,7 @@
 @keyframes bu-bu- {
     0% {
       opacity: 0;
-      transform:translateX(100%);
+      transform:translateX(150%);
     }
     5% {
         opacity: 1;
@@ -125,7 +128,7 @@
         opacity: 1;
     }
     100% {
-      transform:translateX(0%);
+      transform:translateX(-300%);
       opacity: 0;
     }
 }
