--- a/src/ejs/common/_head2.ejs
+++ b/src/ejs/common/_head2.ejs
@@ -3,15 +3,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta name="format-detection" content="telephone=no" />
   <!-- meta情報 -->
-  <title>枚岡交通株式会社</title>
+  <title>ページタイトルが入ります。｜東大阪市のタクシードライバー求人は枚岡交通株式会社</title>
   <meta name="description" content="" />
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="枚岡交通,枚岡交通株式会社,タクシー,タクシードライバー,タクシー運転手,求人,リクルート,新卒,中途,採用,福利厚生,運転手
+  " />
   <!-- ogp -->
-  <meta property="og:title" content="枚岡交通株式会社" />
+  <meta property="og:title" content="ページタイトルが入ります。｜東大阪市のタクシードライバー求人は枚岡交通株式会社" />
   <meta property="og:type" content="article" />
-  <meta property="og:url" content="" />
+  <meta property="og:url" content="https://hiraoka-kotsu-recruit.com/" />
   <meta property="og:image" content="" />
-  <meta property="og:site_name" content="" />
+  <meta property="og:site_name" content="ページタイトルが入ります。｜東大阪市のタクシードライバー求人は枚岡交通株式会社" />
   <meta property="og:description" content="" />
   <meta name="twitter:card" content="summary" />
   <!-- ファビコン -->
