--- a/src/ejs/project/_p-environment.ejs
+++ b/src/ejs/project/_p-environment.ejs
@@ -16,7 +16,7 @@
             }) %> 
         </div>
         <p class="p-environment__text c-text js-scroll-fade">
-            年に1回のもちつき大会やBBQなどのレクリエーションも多数あります！家族や時には地域の皆様を巻き込んで行うので、一気に距離が縮まります！
+            管理部と営業部などの部署間の壁がなく、親しみやすい雰囲気が特徴の会社です。社内に人間関係の壁がなく、新入社員の方も溶け込みやすい環境です！
         </p>
         <div class="p-environment__btn">
             <%- include('../component/_c-btn',{
