--- a/src/ejs/project/_p-mv.ejs
+++ b/src/ejs/project/_p-mv.ejs
@@ -16,7 +16,7 @@
             <picture class="p-mv__img">
                 <img src="./images/top/mv_01.png" alt="きっと見つかる君にピッタリの働き方">
             </picture>
-            <div class="p-mv__entryBtn">
+            <div class="c-big-entryBtn">
                 <a href="./entry/">
                     <img src="./images/common/entry_btn.png" alt="応募する">
                 </a>
