--- a/src/ejs/project/_p-seniorItem.ejs
+++ b/src/ejs/project/_p-seniorItem.ejs
@@ -238,7 +238,7 @@
                     入社してみて抱いた感想
                 </h3>
                 <p class="p-seniorItem__list-text">
-                    人会社には人情味のある方が多く、体調などを気にかけて下さったり、寒い日に暖かい飲み物を頂いたり、家族のような暖かみを感じました。新規部署の仕事は、様々な方たちに協力して頂きながらやらせてもらっているので、様々な方の考え方なども日々学べる環境だと感じました。
+                    会社には人情味のある方が多く、体調などを気にかけて下さったり、寒い日に暖かい飲み物を頂いたり、家族のような暖かみを感じました。新規部署の仕事は、様々な方たちに協力して頂きながらやらせてもらっているので、様々な方の考え方なども日々学べる環境だと感じました。
                 </p>
             </li>
             <li class="p-seniorItem__list">
