--- a/src/ejs/concept/index.ejs
+++ b/src/ejs/concept/index.ejs
@@ -1,6 +1,71 @@
 <!DOCTYPE html>
 <html lang="ja">
-<%- include('../common/_head2') %>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
+    <!-- meta情報 -->
+    <title>Concept｜東大阪市のタクシードライバー求人は枚岡交通株式会社</title>
+    <meta name="description" content="タクシー業界は仕事と私生活を柔軟に連動させる事ができ、ワークライフバランスが取れるため、若い方の価値観と合っている業界です。一緒にタクシー業界のイメージを変えませんか？">
+    <meta name="keywords" content="枚岡交通,枚岡交通株式会社,タクシー,タクシードライバー,タクシー運転手,求人,リクルート,新卒,中途,採用,福利厚生,運転手
+    ">
+    <!-- ogp -->
+    <meta property="og:title" content="Concept｜東大阪市のタクシードライバー求人は枚岡交通株式会社">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://hiraoka-kotsu-recruit.com/concept/">
+    <meta property="og:image" content="">
+    <meta property="og:site_name" content="Concept｜東大阪市のタクシードライバー求人は枚岡交通株式会社">
+    <meta property="og:description" content="タクシー業界は仕事と私生活を柔軟に連動させる事ができ、ワークライフバランスが取れるため、若い方の価値観と合っている業界です。一緒にタクシー業界のイメージを変えませんか？">
+    <meta name="twitter:card" content="summary">
+    <!-- ファビコン -->
+    <link rel="icon" href="#">
+    <!-- css -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&amp;family=Oswald:wght@600&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
+    <link rel="stylesheet" href="../form/addon/confirm/confirm.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- JavaScript -->
+    <script src="https://use.typekit.net/tqm7kjj.js" async=""></script><script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script defer="" src="../js/script.js"></script>
+    <script>
+      (function(d) {
+        var config = {
+            kitId: 'tqm7kjj',
+            scriptTimeout: 3000,
+            async: true
+          },
+          h = d.documentElement,
+          t = setTimeout(function() {
+            h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+          }, config.scriptTimeout),
+          tk = d.createElement("script"),
+          f = false,
+          s = d.getElementsByTagName("script")[0],
+          a;
+        h.className += " wf-loading";
+        tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
+        tk.async = true;
+        tk.onload = tk.onreadystatechange = function() {
+          a = this.readyState;
+          if (f || a && a != "complete" && a != "loaded") return;
+          f = true;
+          clearTimeout(t);
+          try {
+            Typekit.load(config)
+          } catch (e) {}
+        };
+        s.parentNode.insertBefore(tk, s)
+      })(document);
+    </script>
+  <style>.tk-source-han-sans-japanese{font-family:"source-han-sans-japanese",sans-serif;}.tk-a-otf-ryumin-pr6n{font-family:"a-otf-ryumin-pr6n",serif;}.tk-dnp-shuei-mincho-pr6n{font-family:"dnp-shuei-mincho-pr6n",sans-serif;}</style></head>
 <header class="l-header">
   <%- include('../common/_p-header2') %>
 </header>
@@ -31,6 +96,11 @@
   
   <div class="l-entry">
     <%- include('../project/_p-entry') %>
+  </div>
+  <div class="c-big-entryBtn">
+    <a href="./entry/">
+        <img src="../images/common/entry_btn.png" alt="応募する">
+    </a>
   </div>
 </main>
 <footer class="l-footer">
