--- a/src/sass/object/project/_p-banners.scss
+++ b/src/sass/object/project/_p-banners.scss
@@ -26,9 +26,10 @@
     justify-content: center;
     width: 100%;
     height: rem(375);
+    overflow: hidden;
+
 
     @include mq(md) {
-        overflow: hidden;
         height: auto;
         padding: 0 rem(100) 0 rem(100);
         align-items: flex-start;
@@ -99,7 +100,7 @@
 .p-banners__btn {
     display: block;
     margin: 0 auto;
-    max-width: rem(162);
+    max-width: rem(180);
     width: 100%;
     margin-top: rem(22);
 
@@ -125,7 +126,7 @@
 }
 
 .p-banners__news {
-
+    width: 100%;
 }
 
 .p-banners__lists {
